<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:id="@+id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/best_sale_text"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/best_sales"
            android:padding="8dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/best_sale_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/best_sale_product"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp">

        </androidx.recyclerview.widget.RecyclerView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/newest_products_text"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintTop_toTopOf="@id/best_sale_product"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/newest_product"
            android:padding="8dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/newest_products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/newest_products_text"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp">

        </androidx.recyclerview.widget.RecyclerView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/best_quality_text"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintTop_toTopOf="@id/newest_products"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/best_quality"
            android:padding="8dp"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/best_quality_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/best_quality_product"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="16dp">

        </androidx.recyclerview.widget.RecyclerView>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>